WebCore/ChangeLog:

2009-08-12  Szabo Carol  <carol.szabo@nokia.com>

        Reviewed by Simon Hausmann and Ariya Hidayat.

        https://bugs.webkit.org/show_bug.cgi?id=23291

        [Qt] Partial support for -webkit-box-shadow. Blur is not support and
        the shadow still does not go well with border radius.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawRect):
        (WebCore::GraphicsContext::fillRect):

LayoutTests/ChangeLog:

2009-08-12  Ariya Hidayat  <ariya.hidayat@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Pixel tests for (partial) -webkit-box-shadow support.

        * platform/qt/Skipped: Include basic-shadows.
        * platform/qt/fast/box-shadow/basic-shadows-expected.checksum: Added.
        * platform/qt/fast/box-shadow/basic-shadows-expected.png: Added.
        * platform/qt/fast/box-shadow/basic-shadows-expected.txt: Adjusted.

Canonical link: https://commits.webkit.org/38704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47103 268f45cc-cd09-0410-ab3c-d52691b4dbfc